# soda-partner-cert

./: .gitignore  CHANGELOG.md  README.md  profiles.yml  pyproject.toml
docs/: COMMANDS.md
spc/aphrodite/: agent-configuration.yml  agent-values.yml  agreement-checks.yml  checks.yml  distribution_reference.yml
spc/hermes/: __init__.py
spc/hermes/assets/: __init__.py
spc/hermes/assets/storage/: __init__.py
spc/hermes/assets/warehouse/: __init__.py
spc/hermes/jobs/: __init__.py
spc/hermes/resources/: __init__.py  kaggle.py  soda.py
spc/optimus/: dbt_project.yml
spc/optimus/macros/: strptime.sql  strptime.yml
spc/optimus/models/: ev_charging_reports.sql  hourly_ev_loads.sql  models.yml  sources.yml
spc/optimus/models/staging/: stg_ev_charging_reports.sql  stg_hourly_ev_loads.sql
spc/soda/: checks.yml  configuration.yml  distribution_reference.yml
sql/: load.sql
tests/spc/hermes/resources/: test_soda.py
